Change Document::createFilterMask API to require either a Selection or a Node from which to initialize the selection with.

This prevents a crash that would occur when parenting a FilterMask without a selection to a node.

BUG:395000